fixed header and overall page layout issues

--- a/css/styles.sass
+++ b/css/styles.sass
@@ -2,18 +2,18 @@
 ---
 @import 'variables'
 
-html, body
-  heigh: 100%
+// html, body
+  // heigh: 100%
 
-html
-  display: table
-  margin: auto
+// html
+  // display: table
+  // margin: auto
 
 body
-  display: table-cell
-  vertical-align: middle
   padding-top: 50px
   font-size: $font-size
+  // display: table-cell
+  // vertical-align: middle
 
 .navbar-form
   border-top: 0px
